--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -21,5 +21,5 @@
         <img class ="rounded-2xl" src ="{% static './img/book.jpg' %}"/>
     </div>
 </div>
-{% include 'showbook.html' %}
+{% include 'showBook.html' %}
 {% endblock %}
